# python-elastic-query-builder

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: 01-architecture.md  02-class-design.md  03-api-reference.md  04-proposals.md  05-migration-plan.md
src/elastic_query_builder/: __init__.py  builder.py
src/elastic_query_builder/aggregation/: __init__.py  aggregation_builder.py
src/elastic_query_builder/core/: enums.py  types.py
src/elastic_query_builder/query/: __init__.py  has_child.py  has_parent.py  nested.py
src/elastic_query_builder/sort/: __init__.py  sort_builder.py
tests/: test_init.py  test_knn.py  test_phase28_setter_deepcopy.py  test_phase29_bool_append_deepcopy.py  test_phase30_bool_merge_deepcopy.py  test_phase31_build_deepcopy.py  test_phase32_list_copy_consistency.py  test_phase33_explicit_clauses.py  test_query_builder.py  test_query_builder_features.py  test_query_builder_features2.py  test_query_builder_features3.py
tests/aggregation/: test_aggregation_builder.py  test_aggregation_init.py
tests/aggregation/bucket/: test_bucket_init.py  test_date_histogram.py  test_filter.py  test_histogram.py  test_nested.py  test_range.py  test_terms.py
tests/aggregation/metric/: test_avg.py  test_cardinality.py  test_max.py  test_metric_init.py  test_min.py  test_stats.py  test_sum.py  test_top_hits.py
tests/core/: test_enums.py  test_types.py
tests/query/: test_has_child.py  test_has_parent.py  test_nested.py  test_query_init.py
tests/sort/: test_sort_builder.py  test_sort_init.py
(+87 files in other folders)
