[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elastic-query-builder"
version = "0.1.2"
description = "A lightweight, dependency-free Elasticsearch query builder for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "junhyeong", email = "junhyeong9812@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Typing :: Typed",
]
keywords = ["elasticsearch", "query", "builder", "search", "dsl"]

[project.urls]
Homepage = "https://github.com/junhyeong9812/python-elastic-query-builder"
Repository = "https://github.com/junhyeong9812/python-elastic-query-builder"
Issues = "https://github.com/junhyeong9812/python-elastic-query-builder/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/elastic_query_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
